# polymarket-whale-bot

./: .env.example  .gitignore  Makefile  README.md  RESTORE_README.md  alembic.ini  docker-compose.yml  pyproject.toml  reset.sh  run_scorer.sh  start.sh  stop.sh
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_strategy_flow_fixes.py  003_add_specialization_ratio.py  004_add_failed_fill_status.py  006_copy_decisions.py  (+1 more)
data/: category_whales.json  discovered_wallets.json  economic_calendar.json  seed_wallets.json
scripts/: approve_usdc.py  audit_missing_copy_decisions.py  audit_whale_bot.py  audit_whale_pipeline.py  backfill_fees.py  backfill_history.py  backfill_whale_metadata.py  backtest.py  cleanup_db.py  close_all.py  discover_wallets.py  export_report.py  import_resolved.py  migrate_t3.py  migrate_usdc_to_pusd.py  pi_setup.sh  pull_history.py  redeem.py  redeem_all.py  reingest_all.py  repair_live_db.py  repair_whale_trades.py  report_whale_copy.py  seed_wallets.py  sell_all.py  sell_all_wallet.py  sell_orphaned.py  sell_sports.py  setup_wallet.py  status_whale_bot.py  test_trade.py  weather_whale_analysis.py  weather_whale_live_pnl.py  weather_whale_strategy.py  whale_report.py  whale_vs_bot_compare.py
src/: config.py  db.py  events.py  main.py  models.py
tests/: conftest.py  test_audit_fixes.py  test_convergence.py  test_data_api.py  test_market_classifier.py  test_polynode_wallet_ws.py  test_position_sizer.py  test_report_whale_copy.py  test_risk_manager.py  test_signal_manager.py  test_taker_orders.py  test_wallet_scorer.py
(+43 files in other folders)
